database scallng up openapi end point added and fixed hardcode issue
